2011-02-15  Moritz Bunkus  <moritz@bunkus.org>

	* build: Boost 1.36.0 or newer is required (up from 1.34.0). Also
	fixed building with v3 of Boost's filesystem library, e.g. with
	Boost 1.46.0 Beta 1 or newer.

	* mkvpropedit: new feature: Added support for adding, replacing
	and removing tags.

2011-02-07  Moritz Bunkus  <moritz@bunkus.org>

	* all: Added a translation for the programs into Turkish by
	ßouЯock (see AUTHORS).

2011-02-06  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Fixed compilation if configure choses the internal
	versions of libebml and libmatroska while older versions are still
	installed in a location named with "-I..." or "-L..." in
	CFLAGS/CXXFLAGS/LDFLAGS or with configure's
	"--with-extra-includes" and "--with-extra-libs" options.

2011-01-31  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.5.0.

	* build: Building mkvtoolnix now requires libebml v1.2.0 and
	libmatroska v1.1.0 or later.

	* build: enhancement: mkvtoolnix now includes libebml and
	libmatroska. The configure script will use them if either no
	installed versions of them is found or if the installed version is
	too old.

2011-01-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed an infinite loop when reading program
	stream maps in MPEG program streams. Part of a fix for bug 589.

2011-01-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: new feature: Added an option "--track-info" (short:
	"-t") that displays one-line statistics about each track at the
	end of the output. The statistics include the track's total size,
	duration, approximate bitrate and number of packets/frames.

	* mkvinfo: bug fix: The hexdump mode was accessing invalid memory
	if the data to dump was shorter than 16 bytes. It was also
	outputting the values as characters instead of hexadecimal
	numbers. Patch by ykar@list.ru. Fix for bug 591.

2011-01-20  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: The output file name extension is