@@ -32,6 +32,7 @@ enum file_type_e {
   FILE_TYPE_DTS,
   FILE_TYPE_FLAC,
   FILE_TYPE_FLV,
+  FILE_TYPE_HDSUB,
   FILE_TYPE_IVF,
   FILE_TYPE_MATROSKA,
   FILE_TYPE_MICRODVD,
