@@ -1,0 +1,22 @@
+/*
+   mkvmerge -- utility for splicing together matroska files
+   from component media subtypes
+
+   Distributed under the GPL
+   see the file COPYING for details
+   or visit http://www.gnu.org/copyleft/gpl.html
+
+   definitions and helper functions for PGS/SUP subtitles
+
+   Written by Moritz Bunkus <moritz@bunkus.org>.
+*/
+
+#ifndef __MTX_COMMON_PGSSUP_H
+#define __MTX_COMMON_PGSSUP_H
+
+#include "common/os.h"
+
+#define HDSUB_FILE_MAGIC 0x5350 // "SP" big endian
+
+#endif  // __MTX_COMMON_HDSUB_H
+
