@@ -1,3 +1,9 @@
+2011-02-17  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: enhancement: HD-DVD subtitles are recognized as being
+	an unsupported file format. This makes the error message presented
+	to the user a bit clearer. Fix for bug 600.
+
 2011-02-15  Moritz Bunkus  <moritz@bunkus.org>
 
 	* build: Boost 1.36.0 or newer is required (up from 1.34.0). Also
